module-5/istio/timeout-color-frontend-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: color-frontend
  labels:
    workload: color
spec:
  hosts:
  - "*"
  gateways:
  - color-gateway
  http:
  - route:
    - destination:
        host: color-frontend
        subset: v3
        port:
          number: 80
    timeout: 3s
